--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <img class="mainAmazonimg" src="D:/Amazon clone/images/mainimg.png" alt="">
+        <img class="mainAmazonimg" src="images/mainimg.png" alt="">
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <button type="button" class="btn01 btn-dark">Select Your Loction</button>
@@ -67,13 +67,13 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="D:/Amazon clone/images/Fimg1.jpg" class="d-block w-100" alt="...">
+          <img src="images/Fimg1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="D:/Amazon clone/images/fmain.jpg" class="d-block w-100" alt="...">
+          <img src="images/fmain.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="D:/Amazon clone/images/fimg2.jpg" class="d-block w-100" alt="...">
+          <img src="images/fimg2.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -97,7 +97,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Up to 70% off | Clearance store | Fashions</h5>
-          <img src="D:/Amazon clone/images/img1.jpg" class="card-img-top" alt="...">
+          <img src="images/img1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/s?rh=n%3A20538600031&language=en_IN&brr=1&rd=1" class="" role="button" data-bs-toggle="button">See more</a>
           </div>
@@ -106,7 +106,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Prime Day is back! Get prime Now</h5>
-          <img src="D:/Amazon clone/images/img2.jpg" class="card-img-top" alt="...">
+          <img src="images/img2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/amazonprime?ref_=nav_cs_primelink_nonmember" class="pop" role="button" data-bs-toggle="button">Buy Subscription</a>
           </div>
@@ -115,7 +115,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Pay your Credit cards bills on Amazon</h5>
-          <img src="D:/Amazon clone/images/img5.jpg" class="card-img-top" alt="...">
+          <img src="images/img5.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/ap/signin?openid.pape.max_auth_age=3600&openid.return_to=https%3A%2F%2Fwww.amazon.in%2Fhfc%2Fbill%2Fcredit-cards%3Fref_%3Dgw_cc_finserv_ccbp&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=amzn_hfc_in&openid.mode=checkid_setup&language=en_IN&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0"
               class="pop" role="button" data-bs-toggle="button">Pay now</a>
@@ -125,7 +125,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Amazon Brands & more</h5>
-          <img src="D:/Amazon clone/images/img4.jpg" class="card-img-top" alt="...">
+          <img src="images/img4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/b/?_encoding=UTF8&node=7459781031&ref_=sv_top_ap_mega_2" class="pop" role="button" data-bs-toggle="button">New Releases</a>
           </div>
@@ -144,7 +144,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Up to 60% off | Professional tools & more</h5>
-          <img src="D:/Amazon clone/images/img8.jpg" class="card-img-mid" alt="...">
+          <img src="images/img8.jpg" class="card-img-mid" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/Industrial-Scientific/b/?ie=UTF8&node=5866078031&ref_=topnav_storetab_industrialsubnav" class="pop" role="button" data-bs-toggle="button">See more</a>
           </div>
@@ -153,7 +153,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">₹250 cashback | Home Shopping Spree is live</h5>
-          <img src="D:/Amazon clone/images/img9.jpg" class="card-img-mid" alt="...">
+          <img src="images/img9.jpg" class="card-img-mid" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/b/?_encoding=UTF8&node=4951860031&ref_=sv_top_hk_mega_1" class="pop" role="button" data-bs-toggle="button">Collect now</a>
           </div>
@@ -162,7 +162,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Echo dot with Alexa | Music, news & more</h5>
-          <img src="D:/Amazon clone/images/img6.jpg" class="card-img-mid" alt="...">
+          <img src="images/img6.jpg" class="card-img-mid" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/b/?_encoding=UTF8&node=14156834031&ref_=sv_fire_1" class="pop" role="button" data-bs-toggle="button">See more</a>
           </div>
@@ -171,7 +171,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Discover your home with Amazon</h5>
-          <img src="D:/Amazon clone/images/img7.jpg" class="card-img-mid" alt="...">
+          <img src="images/img7.jpg" class="card-img-mid" alt="...">
           <div class="card-body">
             <a href="" class="pop" role="button" data-bs-toggle="button">New Releases</a>
           </div>
@@ -189,7 +189,7 @@
         <div class="row row-cols-1 row-cols-md-6 g-4">
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img12.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img12.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://amzn.eu/d/2TOpfeA" class="text" role="button" data-bs-toggle="button">Oversized t-shits</a>
                 <h6>₹560. Pure cotton fabric. ₹0 delivery charge.</h6>
@@ -198,7 +198,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img class="mens" src="D:/Amazon clone/images/seg3img11.jpg" class="card-img-mid" alt="...">
+              <img class="mens" src="images/seg3img11.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/U-S-Polo-Assn-Regular-I633-001-PL_White_Large/dp/B0793NHJZJ/ref=sr_1_2_sspa?keywords=men+t+shirts&qid=1658227048&sr=8-2-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExSUhBV1RFWUs0UVQ0JmVuY3J5cHRlZElkPUEwNDAxNjY0T1E0SkVNMUVSWTZDJmVuY3J5cHRlZEFkSWQ9QTA3NTc2NjMxVVE1R0tGSUJIVUVGJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ=="
                   class="text" role="button" data-bs-toggle="button">U.S polo t-shirts</a>
@@ -208,7 +208,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img class="mens" src="D:/Amazon clone/images/seg3img10.jpg" class="card-img-mid" alt="...">
+              <img class="mens" src="images/seg3img10.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Van-Heusen-Athleisure-Regular-60033_Navyblue_Large/dp/B07RC1JWHK/ref=sr_1_57_sspa?keywords=men+t+shirts&qid=1658227048&sr=8-57-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExSUhBV1RFWUs0UVQ0JmVuY3J5cHRlZElkPUEwNDAxNjY0T1E0SkVNMUVSWTZDJmVuY3J5cHRlZEFkSWQ9QTA1Mjc5OTQxSTEySE1WQTdFSk4yJndpZGdldE5hbWU9c3BfYnRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ=="
                   class="text" role="button" data-bs-toggle="button">Alen Solly polo t-shits</a>
@@ -218,7 +218,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img class="women" src="D:/Amazon clone/images/seg3img9.jpg" class="card-img-mid" alt="...">
+              <img class="women" src="images/seg3img9.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/LEOTUDE-Regular-Half-Sleeve-T-Shirt/dp/B098K27X7T/ref=sr_1_12?keywords=men+t+shirts&qid=1658227048&sr=8-12" class="text" role="button" data-bs-toggle="button">Budget t-shirts for men</a>
                 <h6>Pure cotton fabric Collor t-shits from ₹400. No charges.</h6>
@@ -227,7 +227,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img class="mens" src="D:/Amazon clone/images/seg3img8.jpg" class="card-img-mid" alt="...">
+              <img class="mens" src="images/seg3img8.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/ELLITI-Hoodies-Pullover-EcoSmart-Sweatshirt/dp/B09D41L5QG/?_encoding=UTF8&pd_rd_w=yQy7J&content-id=amzn1.sym.edcea402-e7ba-4ca1-a7ba-3abf6c9b61c5&pf_rd_p=edcea402-e7ba-4ca1-a7ba-3abf6c9b61c5&pf_rd_r=D252WJN1Y9FZVF4VZNJ3&pd_rd_wg=XAXLo&pd_rd_r=ab527794-d832-4db9-aa6d-731173e773d5&ref_=pd_gw_unk"
                   class="text" role="button" data-bs-toggle="button">Womens Hoodie</a>
@@ -237,7 +237,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img7.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img7.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Indirage-Crop-Hoodie-Women-Ocher/dp/B09QYY627K/?_encoding=UTF8&pd_rd_w=yQy7J&content-id=amzn1.sym.edcea402-e7ba-4ca1-a7ba-3abf6c9b61c5&pf_rd_p=edcea402-e7ba-4ca1-a7ba-3abf6c9b61c5&pf_rd_r=D252WJN1Y9FZVF4VZNJ3&pd_rd_wg=XAXLo&pd_rd_r=ab527794-d832-4db9-aa6d-731173e773d5&ref_=pd_gw_unk"
                   class="text" role="button" data-bs-toggle="button">Shop now</a>
@@ -247,7 +247,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img6.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img6.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Tata-Sampann-Turmeric-Powder-Masala/dp/B079H8D8M6/ref=pd_rhf_gw_s_pd_crcd_sccl_1_7/257-0937241-1490607?pd_rd_w=cQ0E6&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=K03WW6Y5RJCCQW1PCBTC&pd_rd_wg=RlJrn&pd_rd_r=11281625-b0ee-46b0-ad77-41918e2f4851&pd_rd_i=B079H8D8M6&psc=1"
                   class="text" role="button" data-bs-toggle="button">TATA Turmeric powder</a>
@@ -257,7 +257,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img5.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img5.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Fortune-Sunlite-Refined-Sunflower-Oil/dp/B00NYZTGEO/ref=pd_rhf_gw_s_pd_crcd_sccl_1_2/257-0937241-1490607?pd_rd_w=cQ0E6&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=K03WW6Y5RJCCQW1PCBTC&pd_rd_wg=RlJrn&pd_rd_r=11281625-b0ee-46b0-ad77-41918e2f4851&pd_rd_i=B00NYZTGEO&psc=1"
                   class="text" role="button" data-bs-toggle="button">Fortune sunflower oil</a>
@@ -267,7 +267,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img4.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img4.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/SAF-Textured-Multi-Effect-adheshive-SANFHX141/dp/B085Y5VGGK/ref=pd_rhf_gw_s_pd_crcd_sccl_1_21/257-0937241-1490607?pd_rd_w=miasL&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=88KMNDRWV6Q4P89QAWEM&pd_rd_wg=iUxeX&pd_rd_r=289b2c0c-2a63-490d-b891-4919f2fbf947&pd_rd_i=B085Y5VGGK&psc=1"
                   class="text" role="button" data-bs-toggle="button">4 motivation Phtot Frame</a>
@@ -277,7 +277,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img3.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img3.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Decazone-Macrame-Hanging-Floating-Apartment/dp/B09JGKNV2Q/ref=pd_rhf_gw_s_pd_crcd_sccl_1_5/257-0937241-1490607?pd_rd_w=fqpGA&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=KZ3198NNHYT5QYGMZMMH&pd_rd_wg=xHnmi&pd_rd_r=9bfa4b45-b0ab-4644-b585-107c4f05afaa&pd_rd_i=B09JGKNV2Q&psc=1"
                   class="text" role="button" data-bs-toggle="button">Wall hanging Shelf</a>
@@ -287,7 +287,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img src="D:/Amazon clone/images/seg3img2.jpg" class="card-img-mid" alt="...">
+              <img src="images/seg3img2.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Tata-Sampann-Poha-Thick-500/dp/B07V3CM9L8/ref=pd_rhf_gw_s_pd_crcd_sccl_1_8/257-0937241-1490607?pd_rd_w=fqpGA&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=KZ3198NNHYT5QYGMZMMH&pd_rd_wg=xHnmi&pd_rd_r=9bfa4b45-b0ab-4644-b585-107c4f05afaa&pd_rd_i=B07V3CM9L8&psc=1"
                   class="text" role="button" data-bs-toggle="button">TATA High fiber Poha</a>
@@ -297,7 +297,7 @@
           </div>
           <div class="coln">
             <div class="card h-60">
-              <img class="MB" src="D:/Amazon clone/images/seg3img1.jpg" class="card-img-mid" alt="...">
+              <img class="MB" src="images/seg3img1.jpg" class="card-img-mid" alt="...">
               <div class="card-body3">
                 <a href="https://www.amazon.in/Amazon-Brand-Vedaka-Peanuts-Pink/dp/B07KXGFGSS/ref=pd_rhf_gw_s_pd_crcd_sccl_1_2/257-0937241-1490607?pd_rd_w=AOpAn&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=0KVC09P2JDFJWRC3RD1A&pd_rd_wg=xPCum&pd_rd_r=2d6e0376-9d4c-4965-af1f-425cc9d77e7c&pd_rd_i=B07KXGFGSS&psc=1"
                   class="text" role="button" data-bs-toggle="button">Vedaka chitra Rajma</a>
@@ -322,7 +322,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Artificial Plants | Decoratives</h5>
-          <img class="plant" src="D:/Amazon clone/images/img13.jpg" class="card-img-top" alt="...">
+          <img class="plant" src="images/img13.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/Fancy-Mart-Artificial-Hexagun-Pot-0235-888/dp/B01LHNLJT4/ref=pd_rhf_gw_s_pd_crcd_sccl_1_1/257-0937241-1490607?pd_rd_w=qaFWQ&content-id=amzn1.sym.dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_p=dcf9b861-ea71-4cd9-870f-f1d20747f687&pf_rd_r=EYJTKJZCRVEW1EZ5EGW0&pd_rd_wg=OJavv&pd_rd_r=dc0ca045-65eb-4b37-95cd-3a58bbf41ebe&pd_rd_i=B01LHNLJT4&psc=1"
               class="pop" role="button" data-bs-toggle="button">View</a>
@@ -332,7 +332,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Laptops from Top Brands</h5>
-          <img src="D:/Amazon clone/images/img10.jpg" class="card-img-top" alt="...">
+          <img src="images/img10.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="" class="pop" role="button" data-bs-toggle="button">See more</a>
           </div>
@@ -341,7 +341,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Daily Hygine & Essentials</h5>
-          <img src="D:/Amazon clone/images/img11.jpg" class="card-img-top" alt="...">
+          <img src="images/img11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/b?ie=UTF8&node=5728645031&ref_=SNS_DT_GW_SCC_S10_2204&pf_rd_r=D252WJN1Y9FZVF4VZNJ3&pf_rd_p=8925a2fe-86d2-43ff-bbe1-1487bf391a3c&pd_rd_r=ab527794-d832-4db9-aa6d-731173e773d5&pd_rd_w=fuLDE&pd_rd_wg=XAXLo"
               class="pop" role="button" data-bs-toggle="button">Buy now</a>
@@ -351,7 +351,7 @@
       <div class="col">
         <div class="card h-100">
           <h5 class="card-title">Kitchen Cookware & dining</h5>
-          <img class="plate" src="D:/Amazon clone/images/img12.jpg" class="card-img-top" alt="...">
+          <img class="plate" src="images/img12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="https://www.amazon.in/Boho-Hand-Painted-Appetizer-Microwave-2-TAE00123/dp/B09KHCC7YP/?_encoding=UTF8&pd_rd_w=qAD0o&content-id=amzn1.sym.58cd7ce3-1957-410e-bd7b-b01bf0cdbcf0&pf_rd_p=58cd7ce3-1957-410e-bd7b-b01bf0cdbcf0&pf_rd_r=D252WJN1Y9FZVF4VZNJ3&pd_rd_wg=XAXLo&pd_rd_r=ab527794-d832-4db9-aa6d-731173e773d5&ref_=pd_gw_unkaaaa"
               class="pop" role="button" data-bs-toggle="button">See more</a>
